# imageembed

./: .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  README.rst  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: tests.yml
sphinxcontrib/: imageembed.py
tests/: conftest.py  test_imageembed.py
tests/roots/test-sphinxcontrib-imageembed/: conf.py  index.rst
