[metadata]
name = sphinxcontrib-imageembed
summary = Embed images directly into generated html docs.
description-file =
    README.rst
author = Jan Gutter
author-email = github@jangutter.com
home-page = http://www.sphinx-doc.org/
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[wheel]
universal = 1

[mypy]
python_version = 2.7
show_column_numbers = True
show_error_context = True
ignore_missing_imports = True
follow_imports = skip
incremental = True
check_untyped_defs = True
warn_unused_ignores = True

[flake8]
show-source = True
